# LLEE

./: .env.example  .gitignore  pyproject.toml
inspiration/: Evolutionary-thinking-0.2.txt  Evolutionary-thinking.txt  LLEE-paper-v0.6.md  LLEE-paper-v0.7.md  LLEE.txt  LLEE0.4.txt  LLEE0.5.txt  after0.5.txt
inspiration/Aladdin-and-The-Enchanted-Lamp/: light-origin-text.txt
inspiration/PLAN/: LLEE-demo-predesign.md  LLEE-evidence-algorithm-and-gradient.md  LLEE-evolution-and-experiment-v3.md  LLEE-experiment-plan.md
inspiration/Recording-and-Free-Association/: 2026-04-20-corpus-and-renderer.md  2026-04-20-day1.md  2026-04-20-evidence-expansion.md  2026-04-20-phase05-prompt.md  (+6 more)
tasks/: phase05-smoke-test-summary.md  phase1-A-glm-20260422-150438.json  phase1-B-glm-20260422-151454.json  phase1-C-deepseek-chat-20260423-163755.json  phase1-C-glm-20260422-154024.json  phase1-D-deepseek-chat-20260423-163602.json  phase1-D-glm-20260422-152634.json  phase1-F-deepseek-chat-20260423-163346.json  phase1-F-glm-20260422-151207.json  phase1-round1-summary.md  sensitivity-analysis.json  stability-claude-opus-20260421-235759.json  stability-claude-opus-20260422-000325.json  stability-claude-opus-20260422-000946.json  stability-claude-sonnet-20260421-235859.json  stability-deepseek-chat-20260421-235718.json  stability-deepseek-chat-20260422-000303.json  stability-deepseek-chat-20260422-000912.json  stability-glm-20260422-000603.json  stability-glm-20260422-001135.json  stability-glm-20260422-003932.json  stability-glm-20260422-105254.json  stability-glm-20260422-135323.json
(+39 files in other folders)
